// University Magazine Contribution System — Database Schema (DBML)
// v1.2 — Generated from prisma/schema.prisma

// ─── Enums ───────────────────────────────────────────────────────────

Enum Role {
  MARKETING_MANAGER
  MARKETING_COORDINATOR
  STUDENT
  ADMINISTRATOR
  GUEST
}

Enum SubmissionStatus {
  DRAFT
  SUBMITTED
}

Enum ReviewStatus {
  PENDING
  REVIEWING
  COMMENTED
}

// ─── Tables ──────────────────────────────────────────────────────────

Table user {
  id varchar [pk]
  name varchar [not null]
  email varchar [not null, unique]
  emailVerified boolean [not null, default: false]
  image varchar
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
  role Role [default: 'STUDENT']
  facultyId varchar [ref: > faculty.id]
  banned boolean [default: false]
  banReason varchar
  banExpires timestamp
  must_change_password boolean [not null, default: false]
  last_login_at timestamp
}

Table session {
  id varchar [pk]
  expiresAt timestamp [not null]
  token varchar [not null, unique]
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
  ipAddress varchar
  userAgent varchar
  userId varchar [not null, ref: > user.id]
  impersonatedBy varchar

  indexes {
    userId
  }
}

Table account {
  id varchar [pk]
  accountId varchar [not null]
  providerId varchar [not null]
  userId varchar [not null, ref: > user.id]
  accessToken varchar
  refreshToken varchar
  idToken varchar
  accessTokenExpiresAt timestamp
  refreshTokenExpiresAt timestamp
  scope varchar
  password varchar
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]

  indexes {
    userId
  }
}

Table verification {
  id varchar [pk]
  identifier varchar [not null]
  value varchar [not null]
  expiresAt timestamp [not null]
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]

  indexes {
    identifier
  }
}

Table faculty {
  id varchar [pk, default: `cuid()`]
  name varchar [not null, unique]
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
}

Table config_setting {
  id uuid [pk, default: `uuid()`]
  key varchar(255) [not null]
  value varchar(255) [not null]
  type varchar(255) [not null]
  description varchar(255)
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]
  updated_by varchar [ref: > user.id]
}

Table academic_year {
  id uuid [pk, default: `uuid()`]
  year_label varchar(35) [not null]
  start_date date
  end_date date
  start_time time
  end_time time
  noti_message varchar(255)
  first_closure_date timestamp
  final_closure_date timestamp
  is_active boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]
  updated_by varchar [ref: > user.id]
}

Table submission {
  id uuid [pk, default: `uuid()`]
  user_id varchar [not null, ref: > user.id]
  status SubmissionStatus [not null, default: 'DRAFT']
  review_status ReviewStatus [not null, default: 'PENDING']
  agreed boolean [not null, default: false]
  title text
  notes text
  submitted_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]
  is_selected boolean [not null, default: false]
  selected_at timestamp
  selected_by_id varchar [ref: > user.id]
  faculty_id varchar
  academic_year_id varchar [ref: > academic_year.id]
}

Table submission_preview {
  submission_id varchar [pk, ref: > submission.id]
  overview text
  content_titles text[] [not null, default: `ARRAY[]::text[]`]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]
}

Table submission_file {
  id uuid [pk, default: `uuid()`]
  submission_id varchar [not null, ref: > submission.id]
  url varchar [not null]
  pathname varchar [not null]
  content_type varchar
  size integer
  created_at timestamp [not null, default: `now()`]
}

Table submission_comment {
  id uuid [pk, default: `uuid()`]
  submission_id varchar [not null, ref: > submission.id]
  author_id varchar [not null, ref: > user.id]
  author_role varchar [not null]
  body text [not null]
  created_at timestamp [not null, default: `now()`]
  parent_id varchar [ref: > submission_comment.id]

  indexes {
    submission_id
  }
}

Table audit_log {
  id uuid [pk, default: `uuid()`]
  action varchar [not null]
  entity_type varchar [not null]
  entity_id varchar [not null]
  actor_id varchar [not null, ref: > user.id]
  old_value varchar
  new_value varchar
  metadata json
  created_at timestamp [not null, default: `now()`]

  indexes {
    created_at
    actor_id
    entity_id
  }
}

Table access_activity {
  id uuid [pk, default: `uuid()`]
  user_id varchar [not null, ref: > user.id]
  user_name varchar [not null]
  user_email varchar [not null]
  activity_type varchar [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    created_at
    user_id
    activity_type
  }
}

// ─── Relationships ───────────────────────────────────────────────────
//
// user.facultyId            → faculty.id
// session.userId            → user.id
// account.userId            → user.id
// config_setting.updated_by → user.id
// academic_year.updated_by  → user.id
// submission.user_id        → user.id
// submission.selected_by_id → user.id
// submission.academic_year_id → academic_year.id
// submission_preview.submission_id → submission.id
// submission_file.submission_id → submission.id
// submission_comment.submission_id → submission.id
// submission_comment.author_id → user.id
// submission_comment.parent_id → submission_comment.id
// audit_log.actor_id        → user.id
// access_activity.user_id   → user.id
